LendersApp/src/objects/Program_Master_Criteria__c.object
<CustomObject>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Value__c</fullName>
        <label>Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <label>Operator</label>
        <picklist>
            <picklistValues>
                <fullName>Equals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not equals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater equal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lower equal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contains</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Program_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Master</label>
        <referenceTo>ProgramMaster__c</referenceTo>
        <relationshipLabel>Program Master Criterias</relationshipLabel>
        <relationshipName>Program_Master_Criterias</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Program Master Criteria</label>
    <nameField>
        <label>Program Master Criteria Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Program Master Criterias</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>